force-app/main/default/objects/RastreamentoRecursoServico__b/RastreamentoRecursoServico__b.object-meta.xml
<CustomObject>
    <label>Rastreamento do recurso de serviço</label>
    <pluralLabel>Rastreamentos do recurso de serviço</pluralLabel>
</CustomObject>