force-app/main/default/objects/RastreamentoRecursoServico__b/fields/DataLocalizacao__c.field-meta.xml
<CustomField>
    <fullName>DataLocalizacao__c</fullName>
    <label>Data de localização</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>