force-app/main/default/objects/RastreamentoRecursoServico__b/fields/ServiceResource__c.field-meta.xml
<CustomField>
    <fullName>ServiceResource__c</fullName>
    <label>ServiceResource</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>